--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 Hello,
 Welcome to my Project on
 CICD Pipeline
+CICD is Continuous Integration, Continuous Delivery and Continuous Deployment
+It is used for automating the website changes.
