--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <h1>Hello,</h1>
-<h2>Welcome to my Project on</h2>
-<h2>CICD Pipeline.</h2>
+<h2>Welcome to my Project on CICD Pipeline.</h2>
 <h3>CICD is Continuous Integration, Continuous Delivery and Continuous Deployment</h3>
 <h3>It is used for automating the website changes.</h3>
